--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,10 +4,14 @@ on: [push]
 
 jobs:
   build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        py-version: [3.7, 3.8, 3.9]
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.py-version }} on ${{ matrix.os }} 
       uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.py-version }}
         
