--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -8,6 +8,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         py-version: [3.7, 3.8, 3.9]
+        exclude:
+          - os: macos-latest
+            py-version: 3.9
     runs-on: ubuntu-latest
     steps:
     - name: Set up Python ${{ matrix.py-version }} on ${{ matrix.os }} 
